--- a/Pronostico.API/Pronostico.API.csproj
+++ b/Pronostico.API/Pronostico.API.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>805b0e27-9882-49b6-9143-f56514e2b061</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pronostico.DAL\Pronostico.DAL.csproj" />
+    <ProjectReference Include="..\Pronostico.Data\Pronostico.Data.csproj" />
     <ProjectReference Include="..\Pronostico.Objet\Pronostico.Objet.csproj" />
   </ItemGroup>
 
